welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:24: error: not found: value gety
    else if(gety()==0 && GETx()==6) {
            ^Diagonal:24: error: not found: value GETx
    else if(gety()==0 && GETx()==6) {
                         ^